--- a/style/style.css
+++ b/style/style.css
@@ -64,3 +64,27 @@ font-size: 10px;
     background-color:#D6000D;;
     margin-top: 20px;
  }
+
+ /*Main final*/
+ main article{
+     background-color:  rgb(206, 206, 206);
+     border-radius: 10px;
+     width: 30%;
+ }
+ main article p{
+     font-size: 12px;
+     margin-top:15px;
+ }
+ .btn-circle-red{   
+    
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    background-color:#D6000D;
+    border-style: none;
+ }
+
+ /*footer*/
+ footer{
+     background-color: black;
+ }
