--- a/style/style.css
+++ b/style/style.css
@@ -70,6 +70,7 @@ font-size: 10px;
      background-color:  rgb(206, 206, 206);
      border-radius: 10px;
      width: 30%;
+     padding: 10px;
  }
  main article p{
      font-size: 12px;
